Fix *shy on mobile
Required some wild calc() but it works...

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -603,7 +603,7 @@
 // Ah, that's who
 #fluttershy {
 	position: fixed;
-	right: calc((100vw - var(--container-width)) / 2);
+	right: calc((100vw - min(var(--container-width), 90%)) / 2);
 	bottom: 0;
 	transform: translateY(100%);
 	animation: peek var(--transition-long);
